# here

./: .gitignore
.github/: CODEOWNERS
MVP/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
MVP/src/: cli.py  recorder.py  transcriber.py
MVP/src/audio/: chunking.py  mix.py  models.py
MVP/src/config/: settings.py
MVP/src/recording/: __init__.py  linux.py  models.py  service.py
MVP/src/transcription/: __init__.py  client.py  service.py
MVP/tests/: test_recording_linux.py
python-version/: .env.example  README.md  pyproject.toml
python-version/src/: chunking.py  cli.py  live_processing.py
python-version/src/audio/: chunking.py  models.py  silence_boundaries.py  text_merge.py
python-version/src/config/: settings.py
python-version/src/recording/: linux.py  service.py  shared.py  windows.py
python-version/src/transcription/: client.py  segments.py  service.py
python-version/tests/: conftest.py  test_audio_chunking.py  test_audio_mix.py  test_cli.py  test_live_processing.py  test_recording_service.py  test_segments.py  test_silence_boundaries.py  test_text_merge.py  test_transcription_client.py  test_transcription_service.py
